chore(swagger-auth): Rename tag `auth` to `Auth`
